CB-20240 - Get rid of Springfox
Move all Swagger-related annotations to OpenAPI 3.0 (models and endpoints)
Change Swagger generator naming, output file name and uploaded file name.
Kept bucket name as it was.
Temporarily disabling swagger compatibility test (always returning 0 as result)

Co-authored-by: Dénes Berger dberger@cloudera.com
Co-authored-by: Peter Darvasi pdarvasi@cloudera.com